# api/consumer/searchPostDocumentReference/src/v1/handler.py
@@ -5,13 +5,13 @@ from aws_lambda_powertools.utilities.parser.models import APIGatewayProxyEventMo
 from lambda_pipeline.types import FrozenDict, LambdaContext, PipelineData
 from lambda_utils.event_parsing import fetch_body_from_event
 from lambda_utils.logging import log_action
-from nrlf.consumer.fhir.r4.model import RequestQuerySubject
+from nrlf.consumer.fhir.r4.model import RequestQueryStartKey, RequestQuerySubject
 from nrlf.core.common_steps import parse_headers
 from nrlf.core.constants import DbPrefix
 from nrlf.core.errors import assert_no_extra_params
-from nrlf.core.model import ConsumerRequestParams, DocumentPointer, key
+from nrlf.core.model import ConsumerRequestParams, PaginatedResponse, key
 from nrlf.core.repository import Repository, custodian_filter, type_filter
-from nrlf.core.transform import create_bundle_from_document_pointers
+from nrlf.core.transform import create_bundle_from_paginated_response
 
 
 @log_action(narrative="Searching for document references")
@@ -38,11 +38,19 @@ def search_document_references(
         pointer_types=data["pointer_types"],
     )
 
-    document_pointers: list[DocumentPointer] = repository.query_gsi_1(
-        pk=pk, type=pointer_types, producer_id=custodian
+    next_page_token: RequestQueryStartKey = request_params.next_page_token
+
+    if next_page_token is not None:
+        next_page_token = next_page_token.__root__
+
+    response: PaginatedResponse = repository.query_gsi_1(
+        pk=pk,
+        type=pointer_types,
+        producer_id=custodian,
+        exclusive_start_key=next_page_token,
     )
 
-    bundle = create_bundle_from_document_pointers(document_pointers)
+    bundle = create_bundle_from_paginated_response(response)
     return PipelineData(bundle)
 
 
