# api/producer/searchDocumentReference/src/v1/handler.py
@@ -1,4 +1,3 @@
-import json
 from logging import Logger
 from typing import Any
 
@@ -6,13 +5,17 @@ from aws_lambda_powertools.utilities.parser.models import APIGatewayProxyEventMo
 from lambda_pipeline.types import FrozenDict, LambdaContext, PipelineData
 from lambda_utils.logging import log_action
 from nrlf.core.common_steps import parse_headers
-from nrlf.core.constants import NHS_NUMBER_INDEX, DbPrefix
+from nrlf.core.constants import DbPrefix
 from nrlf.core.errors import assert_no_extra_params
-from nrlf.core.model import DocumentPointer, ProducerRequestParams, key
-from nrlf.core.query import create_search_and_filter_query
+from nrlf.core.model import (
+    DocumentPointer,
+    PaginatedResponse,
+    ProducerRequestParams,
+    key,
+)
 from nrlf.core.repository import Repository, type_filter
-from nrlf.core.transform import create_bundle_from_document_pointers
-from nrlf.producer.fhir.r4.model import RequestQuerySubject
+from nrlf.core.transform import create_bundle_from_paginated_response
+from nrlf.producer.fhir.r4.model import RequestQueryStartKey, RequestQuerySubject
 
 
 @log_action(narrative="Searching for document references")
@@ -40,13 +43,19 @@ def search_document_references(
         pointer_types=data["pointer_types"],
     )
 
-    document_pointers: list[DocumentPointer] = repository.query_gsi_2(
+    next_page_token: RequestQueryStartKey = request_params.next_page_token
+
+    if next_page_token is not None:
+        next_page_token = next_page_token.__root__
+
+    response: PaginatedResponse = repository.query_gsi_2(
         pk=key(DbPrefix.Organization, organisation_code),
         type=pointer_types,
         nhs_number=nhs_number,
+        exclusive_start_key=next_page_token,
     )
 
-    bundle = create_bundle_from_document_pointers(document_pointers)
+    bundle = create_bundle_from_paginated_response(response)
     return PipelineData(bundle)
 
 
