# api/producer/searchPostDocumentReference/src/v1/handler.py
@@ -8,10 +8,10 @@ from lambda_utils.logging import log_action
 from nrlf.core.common_steps import parse_headers
 from nrlf.core.constants import DbPrefix
 from nrlf.core.errors import assert_no_extra_params
-from nrlf.core.model import DocumentPointer, ProducerRequestParams, key
+from nrlf.core.model import PaginatedResponse, ProducerRequestParams, key
 from nrlf.core.repository import Repository, type_filter
-from nrlf.core.transform import create_bundle_from_document_pointers
-from nrlf.producer.fhir.r4.model import RequestQuerySubject
+from nrlf.core.transform import create_bundle_from_paginated_response
+from nrlf.producer.fhir.r4.model import RequestQueryStartKey, RequestQuerySubject
 
 
 @log_action(narrative="Searching for document references")
@@ -29,18 +29,29 @@ def search_document_references(
     assert_no_extra_params(request_params=request_params, provided_params=body)
     nhs_number: RequestQuerySubject = request_params.nhs_number
     organisation_code = data["organisation_code"]
+
+    print("pointer_types pre filter", data["pointer_types"])
+
     pointer_types = type_filter(
         type_identifier=request_params.type_identifier,
         pointer_types=data["pointer_types"],
     )
 
-    document_pointers: list[DocumentPointer] = repository.query_gsi_2(
+    print("pointer_types post filter", pointer_types)
+
+    next_page_token: RequestQueryStartKey = request_params.next_page_token
+
+    if next_page_token is not None:
+        next_page_token = next_page_token.__root__
+
+    response: PaginatedResponse = repository.query_gsi_2(
         pk=key(DbPrefix.Organization, organisation_code),
         type=pointer_types,
         nhs_number=nhs_number,
+        exclusive_start_key=next_page_token,
     )
 
-    bundle = create_bundle_from_document_pointers(document_pointers)
+    bundle = create_bundle_from_paginated_response(response)
     return PipelineData(bundle)
 
 
